setup sql server communication properly

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 - [x] Create .config
-- [] Install and play with SQL server
+- [x] Install and play with SQL server
 - [] Create stack
 - Manage stacks (choose a stack to manage)
     - [] Debug: add multiple flashcards
