implemented add debug study sessions

--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,7 @@
     - [x] Rename stack
     - [x] Draw table
 - Study area
-    - [] Debug: add multiple sessions over past 3 years
+    - [x] Debug: add multiple sessions over past 3 years
     - [] Start session (choose a stack to study)
     - [] View past sessions (choose a stack to view)
     - [] View annual report (choose year)
