--- a/todo.txt
+++ b/todo.txt
@@ -10,7 +10,7 @@
     - [x] Draw table
 - Study area
     - [x] Debug: add multiple sessions over past 3 years
-    - [] Start session (choose a stack to study)
+    - [x] Start session (choose a stack to study)
     - [] View past sessions (choose a stack to view)
     - [] View annual report (choose year)
 - [] Validations
